[gd_scene load_steps=16 format=3 uid="uid://bjknkwciyo6bl"]

[ext_resource type="Script" path="res://src/weapons/PowerBomb/PowerBomb.gd" id="1_k6am3"]
[ext_resource type="PackedScene" uid="uid://bayhekmn8i6d8" path="res://src/components/Hitbox.tscn" id="1_tsqn7"]
[ext_resource type="Texture2D" uid="uid://b57bsssb2tofc" path="res://src/assets/zm_power_suit.png" id="2_wlq2b"]
[ext_resource type="Texture2D" uid="uid://bdj3hh8pvdjal" path="res://src/assets/sm_weapons.png" id="3_0o7hs"]
[ext_resource type="AudioStream" uid="uid://cpm111enn1pmv" path="res://src/assets/sounds/sfx/bomb_drop.wav" id="4_u0u7l"]

[sub_resource type="CircleShape2D" id="CircleShape2D_676rq"]
radius = 32.0

[sub_resource type="AtlasTexture" id="AtlasTexture_136u4"]
atlas = ExtResource("2_wlq2b")
region = Rect2(816, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ljni"]
atlas = ExtResource("2_wlq2b")
region = Rect2(864, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwmbe"]
atlas = ExtResource("2_wlq2b")
region = Rect2(912, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_p6d83"]
atlas = ExtResource("2_wlq2b")
region = Rect2(960, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c5fod"]
atlas = ExtResource("2_wlq2b")
region = Rect2(1008, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jln7"]
atlas = ExtResource("3_0o7hs")
region = Rect2(340, 0, 20, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfhq7"]
atlas = ExtResource("3_0o7hs")
region = Rect2(340, 25, 20, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxlqt"]
atlas = ExtResource("3_0o7hs")
region = Rect2(340, 50, 20, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_vx5fs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_136u4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ljni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwmbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p6d83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c5fod")
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"detonate",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jln7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfhq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxlqt")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}]

[node name="PowerBomb" type="Area2D"]
script = ExtResource("1_k6am3")

[node name="HitBox" parent="." instance=ExtResource("1_tsqn7")]
collision_layer = 32
collision_mask = 128
damage = 10

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource("CircleShape2D_676rq")
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vx5fs")
animation = &"detonate"
autoplay = "idle"
frame = 5
frame_progress = 1.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_u0u7l")
volume_db = -20.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="HitBox"]
